# cloud_segmentation

./: CMakeLists.txt  README.md  cloud_segmentation_https.rosinstall  cloud_segmentation_ssh.rosinstall  package.xml
config/: cofusion_car.yaml  cofusion_room.yaml  default.yaml
include/cloud_segmentation/: cloud_segmentation.h  viewer_utils.h
launch/: cloud_segmentation.launch
src/: cloud_segmentation.cc  node.cc
